feat: new guides (prompt templates, self-host), billing updates, claude config

--- a/content/cloud/billing.mdx
+++ b/content/cloud/billing.mdx
@@ -1,105 +1,149 @@
 # Pricing
 
-Genfeed.ai offers simple, transparent pricing to power your content creation.
+Genfeed.ai offers flexible pricing options designed for serious content creators, agencies, and SMBs.
 
-## Subscription Plans
+## Pricing Options
 
-### Monthly Plan
+### Self-Hosted (Free)
 
-**$299/month**
+Deploy Genfeed Core on your own infrastructure with your own AI API keys.
 
-- Unlimited content generation
-- Access to all AI models
-- All features included
-- Priority support
-- Cancel anytime
+- Full platform access
+- Unlimited users
+- Bring your own AI keys
+- Community support
+- All core features
 
-### Yearly Plan
+[Get Started with Self-Hosting](/host)
 
-**$2,990/year**
+### Pro Subscription
 
-- Everything in Monthly Plan
-- Save $598 (2 months free!)
-- Annual billing
-- Best value for committed users
+**$299/month** or **$2,990/year** (save 2 months)
 
-## Credit Packs
+For SMBs and agencies who want managed cloud hosting:
 
-Prefer pay-as-you-go? Purchase credits that never expire:
+- Managed cloud infrastructure
+- Priority AI models
+- Email support
+- Automatic updates
+- All premium features
 
-### Starter Pack
+### Enterprise
 
-**100 Credits - $10**
+Custom pricing for teams and organizations with advanced needs:
 
-- Perfect for trying Genfeed.ai
-- No expiration date
-- Use across all features
+- Everything in Pro
+- Custom output packages
+- Workspace-based pricing
+- SSO & team management
+- Dedicated support
+- SLA guarantee
 
-### Pro Pack
+[Contact Sales](/request-access)
 
-**500 Credits - $45**
+---
 
-- 10% savings vs Starter Pack
-- Great for regular users
-- Flexible usage
+## Pay-As-You-Go Credit Packs
 
-### Enterprise Pack
+Purchase GEN credits that never expire. Use credits across all AI features.
 
-**2,000 Credits - $160**
+| Tier | Price | Credits | Best For |
+|------|-------|---------|----------|
+| **Starter** | $249 | 24,900 | Getting started |
+| **Growth** | $499 | 49,900 | Growing creators |
+| **Creator** | $999 | 99,900 | Serious creators |
+| **Professional** | $2,499 | 275,000 | Agencies |
+| **Enterprise** | $4,999 | 625,000 | Studios |
 
-- 20% savings vs Starter Pack
-- Best value for power users
-- Bulk discount pricing
+---
 
 ## How Credits Work
 
-Different AI features consume different amounts of credits:
+Different AI operations consume different amounts of GEN credits based on model costs and compute time.
 
 ### Text Generation
 
-- **Quick Posts**: 1-2 credits
-- **Long Articles**: 3-5 credits
-- **SEO Content**: 2-4 credits
+| Operation | Approximate Cost |
+|-----------|-----------------|
+| Quick posts | 3-10 GEN |
+| Long articles | 15-30 GEN |
+| SEO content | 10-25 GEN |
 
 ### Image Generation
 
-- **Simple Images**: 5-10 credits
-- **Complex Artwork**: 15-20 credits
-- **Multiple Variations**: 20-30 credits
+| Operation | Approximate Cost |
+|-----------|-----------------|
+| Standard images | 50-100 GEN |
+| High-quality images | 100-200 GEN |
+| Multiple variations | 200-400 GEN |
 
 ### Video Generation
 
-- **Short Clips**: 20-30 credits
-- **Full Videos**: 40-50 credits
+| Operation | Approximate Cost |
+|-----------|-----------------|
+| Short clips (5s) | 500-1,000 GEN |
+| Standard videos (15s) | 1,500-3,000 GEN |
+| Long-form videos (30s+) | 3,000-6,000 GEN |
 
 ### Audio Generation
 
-- **Voice Overs**: 10-15 credits
-- **Music/SFX**: 20-30 credits
+| Operation | Approximate Cost |
+|-----------|-----------------|
+| Voice synthesis | 100-200 GEN |
+| Music generation | 200-500 GEN |
 
-## Which Plan is Right for You?
+> Credit costs vary based on the AI model selected. Premium models consume more credits but deliver higher quality results.
+
+---
+
+## Which Option is Right for You?
 
 ### Choose Subscription if:
 
 - You create content daily
-- You want predictable costs
-- You need unlimited generation
-- You use multiple AI models regularly
+- You want predictable monthly costs
+- You need managed infrastructure
+- You prefer automatic updates and support
 
-### Choose Credits if:
+### Choose Pay-As-You-Go if:
 
-- You create content occasionally
-- You want to control spending
-- You're just getting started
 - You have variable content needs
+- You want to control spending precisely
+- You're evaluating the platform
+- You need flexibility in usage
+
+### Choose Self-Hosted if:
+
+- You have technical resources
+- You want full control over infrastructure
+- You have your own AI API keys
+- You prefer open-source solutions
+
+---
 
 ## Payment & Billing
 
-- **Payment Methods**: All major credit/debit cards
-- **Secure Processing**: Bank-level encryption
-- **Instant Access**: Start creating immediately
-- **Flexible Management**: Change or cancel anytime
+- **Payment Methods**: All major credit/debit cards via Stripe
+- **Secure Processing**: PCI-compliant, bank-level encryption
+- **Instant Access**: Start creating immediately after purchase
+- **Flexible Management**: Upgrade, downgrade, or cancel anytime
+- **Invoices**: Available in your Settings dashboard
 
-## Get Started Today
+## Promo Codes
 
-Ready to supercharge your content creation? [Sign up now](https://genfeed.ai) and start creating amazing content with AI!
+Have a promo code? Apply it at checkout for special pricing. Promo codes are available through:
+
+- Community events
+- Partner programs
+- Early adopter offers
+- Annual plan promotions
+
+---
+
+## Get Started
+
+Ready to create amazing AI-powered content?
+
+- [Start Free Trial](https://genfeed.ai/request-access) - Try Pro with no commitment
+- [Self-Host Free](https://genfeed.ai/host) - Deploy on your infrastructure
+- [Contact Sales](https://genfeed.ai/request-access) - Enterprise solutions
