Update documentation structure and references to align with new `.agents/` directory
- Changed references from `.agent/` to `.agents/` in multiple documentation files for consistency.
- Updated project documentation to reflect the new structure, including paths to workspace-level and project-specific documents.
- Revised command instructions in `README.md` and other files to match the updated setup.
- Enhanced navigation links in various guides to ensure accurate routing within the documentation site.

--- a/content/api-reference/overview.mdx
+++ b/content/api-reference/overview.mdx
@@ -55,7 +55,7 @@ console.log(data);
 
 The full OpenAPI specification is available at https://api.genfeed.ai/v1/openapi.json
 
-For interactive API documentation, visit the [API Reference](/api/reference) page.
+For interactive API documentation, visit the [API Reference](/api-reference/reference) page.
 
 ## Support
 
