--- a/content/core/installation.mdx
+++ b/content/core/installation.mdx
@@ -299,7 +299,7 @@ bun run start:dev
 
 ## Next Steps
 
-- [API Reference](/api/overview) — Explore the REST API
+- [API Reference](/api-reference/overview) — Explore the REST API
 - [Documentation](https://docs.genfeed.ai) — Full platform documentation
 
 ---
