--- a/content/guides/self-host-quickstart.mdx
+++ b/content/guides/self-host-quickstart.mdx
@@ -165,7 +165,7 @@ Need multi-tenancy, publishing, or analytics? [Try GenFeed Cloud](https://genfee
 
 ## Next Steps
 
-- [API Reference](/api-reference) — Full API documentation
+- [API Reference](/api-reference/overview) — Full API documentation
 - [Models](/models) — Supported AI models and providers
 - [Deployment Options](/deployment) — Production deployment guides
 - [GenFeed Cloud](https://genfeed.ai) — Managed platform with all features
