--- a/content/index.mdx
+++ b/content/index.mdx
@@ -57,7 +57,7 @@ bun dev
 - [**Features**](/features) — Full feature comparison
 
 ### Reference
-- [**API Reference**](/api-reference) — REST API documentation
+- [**API Reference**](/api-reference/overview) — REST API documentation
 - [**FAQ**](/faq) — Common questions
 
 ---
