docs: fix drifted links and workspace path references

--- a/content/cloud/billing.mdx
+++ b/content/cloud/billing.mdx
@@ -14,7 +14,7 @@ Deploy Genfeed Core on your own infrastructure with your own AI API keys.
 - Community support
 - All core features
 
-[Get Started with Self-Hosting](/host)
+[Get Started with Self-Hosting](https://genfeed.ai/host)
 
 ### Pro Subscription
 
@@ -39,7 +39,7 @@ Custom pricing for teams and organizations with advanced needs:
 - Dedicated support
 - SLA guarantee
 
-[Contact Sales](/request-access)
+[Contact Sales](https://genfeed.ai/request-access)
 
 ---
 
