--- a/content/cloud/brands.mdx
+++ b/content/cloud/brands.mdx
@@ -62,5 +62,5 @@ Organizations can have multiple brands:
 
 ## Next Steps
 
-- [Voices & Tones](/cloud/voices) — Deep dive into voice settings
+- [Voices & Tones](/cloud/settings) — Deep dive into voice settings
 - [Team](/cloud/team) — Control who can edit brands
