--- a/content/core/installation.mdx
+++ b/content/core/installation.mdx
@@ -145,16 +145,16 @@ You should see:
 
 ## Running the Frontend (Optional)
 
-Genfeed Core includes the API only. To run the full Studio interface:
+Genfeed Core includes the API only. To run the full Studio interface from the workspace monorepo:
 
 ```bash
-# In a separate terminal
-cd genfeed.ai
+# In a separate terminal, from the `cloud/` workspace root
+cd cloud/apps/web/studio
 bun install
-bun run start:dev:studio
+bun run dev
 ```
 
-The Studio will be available at `http://localhost:3000`.
+The Studio will be available at `http://localhost:3106`.
 
 ---
 
