--- a/content/deployment/overview.mdx
+++ b/content/deployment/overview.mdx
@@ -78,7 +78,7 @@ Some features require Genfeed Cloud:
 
 ### Getting Started Self-Hosted
 
-[**Self-Hosted Installation Guide →**](/deployment/self-hosted)
+[**Self-Hosted Installation Guide →**](/guides/self-host-quickstart)
 
 ---
 
