--- a/content/faq.mdx
+++ b/content/faq.mdx
@@ -35,7 +35,7 @@ Genfeed.ai offers access to multiple state-of-the-art language models. See our [
 
 ### Can I use voice input to create content?
 
-Yes! Genfeed.ai supports voice recognition for hands-free content creation. See our [Voice Recognition Guide](/content-creation/voice-recognition) for setup instructions.
+Yes! Genfeed.ai supports voice recognition for hands-free content creation. See our [Voice Recognition Guide](/guides/voice-recognition) for setup instructions.
 
 ### Can I collaborate with my team?
 
@@ -55,7 +55,7 @@ Yes, we offer a free trial so you can explore Genfeed.ai before committing to a 
 
 ### What plans are available?
 
-We offer several plans to fit different needs. See our [Pricing & Plans](/pricing) page for details.
+We offer several plans to fit different needs. See our [Pricing & Plans](https://genfeed.ai/pricing) page for details.
 
 ### How do I upgrade or downgrade my plan?
 
@@ -80,7 +80,7 @@ You can reach our support team at [support@genfeed.ai](mailto:support@genfeed.ai
 ### Where can I find more help?
 
 - Visit our [Documentation Home](/)
-- Check out our [Prompting Guide](/content-creation/prompting-guide)
+- Check out our [Prompting Guide](/guides/prompting-guide)
 - Contact support if you need further assistance
 
 ---
