--- a/content/getting-started.mdx
+++ b/content/getting-started.mdx
@@ -32,7 +32,7 @@ cp .env.example .env.local
 bun run start:dev
 ```
 
-[**Full Self-Hosted Guide →**](/deployment/self-hosted)
+[**Full Self-Hosted Guide →**](/guides/self-host-quickstart)
   </Tabs.Tab>
 </Tabs>
 
@@ -209,9 +209,9 @@ Keep an eye on your credit usage to optimize your workflow.
 
 Now that you understand the basics:
 
-1. Read our [Prompting Guide](/content-creation/prompting-guide) to master content generation
+1. Read our [Prompting Guide](/guides/prompting-guide) to master content generation
 2. Explore [Available Models](/models) to choose the best for your needs
-3. Set up [Social Media Accounts](/publish) for publishing
+3. Set up [Social Media Accounts](/guides/publishing) for publishing
 4. Learn about [Advanced Features](/advanced/features)
 
 Welcome to the Genfeed.ai community! We're excited to see what you create.
