--- a/content/guides/index.mdx
+++ b/content/guides/index.mdx
@@ -12,7 +12,7 @@ Learn how to get the most out of Genfeed.ai with our comprehensive guides.
 ## Publishing
 
 - [**Publishing Overview**](/guides/publishing) — Automate your content distribution
-- [**Social Media**](/guides/publishing/social-media) — Publish to YouTube, TikTok, Instagram & more
+- [**Social Media**](/guides/publishing) — Publish to YouTube, TikTok, Instagram & more
 
 ---
 
