--- a/content/guides/self-host-quickstart.mdx
+++ b/content/guides/self-host-quickstart.mdx
@@ -167,5 +167,5 @@ Need multi-tenancy, publishing, or analytics? [Try GenFeed Cloud](https://genfee
 
 - [API Reference](/api-reference/overview) — Full API documentation
 - [Models](/models) — Supported AI models and providers
-- [Deployment Options](/deployment) — Production deployment guides
+- [Deployment Options](/deployment/overview) — Production deployment guides
 - [GenFeed Cloud](https://genfeed.ai) — Managed platform with all features
