docs: fix core repo and command drift

--- a/content/core/contributing.mdx
+++ b/content/core/contributing.mdx
@@ -9,8 +9,8 @@ Help make Genfeed Core better for everyone.
 3. Create a branch for your feature
 
 ```bash
-git clone https://github.com/YOUR_USERNAME/genfeed-core.git
-cd genfeed-core
+git clone https://github.com/YOUR_USERNAME/core.git
+cd core
 git checkout -b feature/my-feature
 ```
 
@@ -50,8 +50,8 @@ bun run format
 ## Community
 
 - [Discord](https://discord.gg/TmfHg42xVb)
-- [GitHub Discussions](https://github.com/genfeedai/genfeed-core/discussions)
+- [GitHub Discussions](https://github.com/genfeedai/core/discussions)
 
 ## License
 
-Genfeed Core is MIT licensed. By contributing, you agree to license your contributions under MIT.
+Genfeed Core is AGPL-3.0 licensed. By contributing, you agree to license your contributions under AGPL-3.0.
