--- a/content/core/index.mdx
+++ b/content/core/index.mdx
@@ -26,8 +26,8 @@ Your API Keys → Workflow Engine → AI Content
 ## Quick Start
 
 ```bash
-git clone https://github.com/genfeedai/genfeed-core.git
-cd genfeed-core
+git clone https://github.com/genfeedai/core.git
+cd core
 bun install
 cp .env.example .env.local
 # Add your API keys to .env.local
