--- a/content/deployment/overview.mdx
+++ b/content/deployment/overview.mdx
@@ -49,7 +49,7 @@ Genfeed.ai is available in two deployment modes: **Genfeed Cloud** (hosted SaaS)
 
 - **Full Control** — Your data stays on your servers
 - **Customizable** — Modify and extend as needed
-- **No Vendor Lock-in** — MIT licensed core
+- **No Vendor Lock-in** — AGPL-3.0 licensed core
 - **Cost Efficient at Scale** — Pay only for your infrastructure
 - **Air-gapped Deployments** — Works in isolated environments
 
