--- a/content/getting-started.mdx
+++ b/content/getting-started.mdx
@@ -24,12 +24,12 @@ Genfeed.ai is available in two deployment modes. Choose the one that fits your n
 **Prerequisites:** Node.js 18+, MongoDB, Redis
 
 ```bash
-git clone https://github.com/genfeedai/genfeed-core.git
-cd genfeed-core
+git clone https://github.com/genfeedai/core.git
+cd core
 bun install
 cp .env.example .env.local
 # Configure your .env.local with API keys
-bun run start:dev
+bun dev
 ```
 
 [**Full Self-Hosted Guide →**](/guides/self-host-quickstart)
