--- a/content/index.mdx
+++ b/content/index.mdx
@@ -25,8 +25,8 @@ Genfeed.ai is an AI-powered content generation platform. Build workflows, connec
 ### Core (Self-Hosted)
 
 ```bash
-git clone https://github.com/genfeedai/genfeed-core.git
-cd genfeed-core
+git clone https://github.com/genfeedai/core.git
+cd core
 bun install
 cp .env.example .env.local  # Add your API keys
 bun dev
